# AbstractPlatform

./: CMakeLists.txt
common/: CMakeLists.txt
common/AbstractPlatform/common/: ArrayHelper.hpp  BinaryOperations.hpp  BlockIterator.hpp  ErrorCode.hpp  Memory.hpp  Platform.hpp  PlatformLiteral.hpp  TensorIterator.hpp  TypeBinaryRepresentation.hpp
common/test/: BinaryOperationsTest.cpp  BlockIteratorTest.cpp  CMakeLists.txt  MemoryTest.cpp  TensorIteratorTest.cpp  TypeBinaryRepresentationTest.cpp
i2c/: AbstractI2C.hpp  CMakeLists.txt
i2c/AbstractPlatform/i2c/: AbstractI2C.hpp
output/: CMakeLists.txt
output/display/: CMakeLists.txt
output/display/AbstractPlatform/output/display/: AbstractCanvas.hpp  AbstractDisplay.hpp  AbstractDisplayDriver.hpp  CanvasView.hpp  Drawer.hpp  Pixel.hpp  RawBufferCanvas.hpp  StaticCanvasView.hpp
output/display/AbstractPlatform/output/display/font/: 8x8pixelFont.hpp
output/display/test/: AbstractCanvasTest.cpp  AbstractDisplayTest.cpp  CMakeLists.txt  CanvasViewTest.cpp  StaticCanvasViewTest.cpp
platform/: CMakeLists.txt  Platform.hpp  PlatformLiteral.hpp
tensor/: CMakeLists.txt
tensor/AbstractPlatform/tensor/: SaticTensorIterator.hpp  StaticTensorIterator.hpp
tensor/test/: CMakeLists.txt  SaticTensorIteratorTest.cpp  StaticTensorIteratorTest.cpp  TensorIteratorTest.cpp
